# bank-kata

./: Cargo.toml  README.md
src/: bank_account.rs  main.rs
src/domain/: amount.rs  balance.rs  bank_account.rs  mod.rs
