[package]
name = "bank_account"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
codegen-units = 1
lto = true
opt-level = 3 # Optimize for size
panic = "abort"

[dependencies]
chrono = "0.4.39"
num-traits = "0.2.19"
deepsize = "0.2.0"

[dev-dependencies]
regex = "1.11.1"
